  16-Dec-2019    V0.34 Suppress tracebacks for some connection issues.
   3-Feb-2020    V0.35 Update dependencies
   4-Feb-2020    V0.36 Add stricter tests for failed lookup requests.
   8-Feb-2020    V0.37 Add independent tests for failover, expose more parameter
                       controls to public methods.
  13-Feb-2020    V0.38 Add further uniqueness checks in reformatting Uniprot features.
  18-Feb-2020    V0.39 Add Pfam and InterPro annotation providers
  18-Feb-2020    V0.40 Handle encoding issues for Py27
   5-Apr-2020    V0.41 Adjust logging details for UniProt fetchlist
  20-Jun-2020    V0.42 Add method fetchSequenceList() to fetch fasta sequences
  22-Jun-2020    V0.43 Add methods to return SeqAlign() from SIFTS data.
  23-Aug-2020    V0.43 Adjust InterPro ftp URL references.
   9-Oct-2020    V0.44 Add organism host taxonomy
  24-Oct-2020    V0.46 Adjust tests to handle Ubuntu 20.04 issues
  30-Nov-2020    V0.47 add UniProtIdMappingProvider() and tests.
   1-Dec-2020    V0.48 make UniProtIdMappingProvider() a singleton.
   2-Dec-2020    V0.49 Add legacy id mapping data in UniProtIdMappingProvider()
  10-Dec-2020    V0.50 Add 'tdd' format in UniProtIdMappingProvider() and improve save and load performance
  10-Dec-2020    V0.51 Add to and from stash methods in UniProtIdMappingProvider()
  22-Mar-2020    V0.52 Add backup and restore methods in  UniProtIdMappingProvider()
  23-Mar-2020    V0.53 Add clearCache methods and preserve loaded state across multiple instances of UniProtIdMappingProvider()
  10-May-2021    V0.54 Add feature and gene lookup method in UniProtUtils()
  10-May-2021    V0.55 Adjust return prototype for lookup functions
  10-May-2021    V0.56 Add review option for doGeneLookup()
  10-May-2021    V0.57 Adjustments to UniProt FASTA comment line parser
  26-May-2021    V0.58 Add Pfam mapping methods and GlyGenProvider() and associated tests
  27-May-2021    V0.59 Tweaking diagnostic output in GlyGenProvider()