@@ -50,3 +50,4 @@
   10-May-2021    V0.57 Adjustments to UniProt FASTA comment line parser
   26-May-2021    V0.58 Add Pfam mapping methods and GlyGenProvider() and associated tests
   27-May-2021    V0.59 Tweaking diagnostic output in GlyGenProvider()
+  28-May-2021    V0.60 Add read-only version of GlycanProvider() and associated tests
